--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.12",
+    "debug": "^4.3.5",
     "express": "^4.19.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
